@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.19 1999/01/22 19:49:20 db Exp $
+ * $Id: config.h.dist,v 1.20 1999/01/23 12:07:08 db Exp $
  */
 
 #ifndef	__config_include__
@@ -735,6 +735,16 @@
  * on the net gets less than 2, a split is deemed to have happened.
  */
 #define SPLIT_SMALLNET_SIZE 2
+
+/*
+ * SPLIT_SMALLNET_USER_SIZE defines how many global users on the
+ * net constitute a "normal" net size. It's used in conjunction
+ * with SPLIT_SMALLNET_SIZE to help determine the end of a split.
+ * if number of server seen on net > SPLIT_SMALLNET_SIZE &&
+ * number of users seen on net > SPLIT_SMALLNET_USER_SIZE start
+ * counting down the SERVER_SPLIT_RECOVERY_TIME
+ */
+#define SPLIT_SMALLNET_USER_SIZE 10000
 
 /*
  * DEFAULT_SERVER_SPLIT_RECOVERY_TIME - determines how long to delay split
